--- a/index.html
+++ b/index.html
@@ -1,5 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+    
+    /*************************************************************************************************************************************
+
+Criteria 1: Appropriate semantic tags used, both the predefined tags and the appropriate use of div block tags.
+	•No evidence of appropriate semantic tags used, both the predefined tags and the appropriate use of div block tags.(0 pts)
+	•Sparse use of appropriate semantic tags used, both the predefined tags and the appropriate use of div block tags.(0.5 pts)
+	•Comprehensive use of appropriate semantic tags used where all significant semantic spaces in the pages are defined semantically, both the predefined tags and the appropriate use of div block tags.(1 pt)
+ 
+Criteria 2: The range of different layout, formatting and media HTML tags used and their appropriate use 
+    (eg tables used as tables not for layout) 
+	•Significant amount of missing layout, formatting and media HTML tags(0 pts)
+	•Good range of different layout, formatting and media HTML tags used and their appropriate use, including layout structures such as lists, a variety of media and a range of formatting tags beyond simple <h1> and <p> tags only. They used the tags taught in the course but not more.(0.5 pts)
+	•Extensive and innovative use of a wide range of different layout, formatting and media HTML tags used and their appropriate use, with good use of layout structures such as lists, extended and appropriate range of media and use of formatting tags that demonstrate a good understanding of the value in formatting content richly. They have gone beyond what was taught in the course. (1 pt)
+ 
+Criteria 3: Rich comments 
+	•Little or no comments used within the code.(0 pts)
+	•Sparse comments showing only the major semantic structures in the code.(0.5 pts)
+	•Helpful comments showing intention behind a structure and contributor.(1 pt)
+ 
+Criteria 4: Accessibility, particularly in the use of the media tags. 
+	•No evidence of consideration of accessibility.(0 pts)
+	•Little evidence of consideration of accessibility, for example using media files names in the alt attribute of the <img> tag(0.5 pts)
+	•Helpful consideration of accessibility, for example describing the content of media files in the alt attribute of the <img> tag(1 pt)
+
+**************************************************************************************************************************************/
+    
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
