--- a/_html_site/page_2.html
+++ b/_html_site/page_2.html
@@ -1,16 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Theme Park IFRAME LOADER</title>
+    <title>Theme Park PAGE 2</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
-
-<a href="_html_site/index.html">Load HTML Index Page</a><br/>
-<a href="_wireframe/index.html">Load WireFrame Index Page</a>
-
+<body>
+    <h1>Theme Park Page 2</h1>
+    <script src="script.js"></script>
+</body>
 </html>
