--- a/_html_site/page_3.html
+++ b/_html_site/page_3.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Theme Park PAGE 3</title>
-    <link href="style.css" rel="stylesheet" type="text/css" />
+    <link href="../css/style.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
     <h1>Theme Park Page 3</h1>
-    <script src="script.js"></script>
+    <script src="../js/script.js"></script>
 </body>
 </html>
