--- a/_wireframe/index.html
+++ b/_wireframe/index.html
@@ -1,14 +1,143 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Basic Page Needs -->
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Theme Park WireFrame INDEX</title>
-    <link href="style.css" rel="stylesheet" type="text/css" />
+    <meta name="description" content="WireFrame Mockup for Theme Park Site HomePage">
+    <meta name="author" content="Lawrence Sheed (小杜)">
+    <title>Theme Park WireFrame Home Page</title>
+
+    <!-- Mobile Specific -->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    
+    <!-- Load our custom css -->
+    <!-- Using Skeleton Framework for layout purposes -->
+    <link rel="stylesheet" href="../css/normalize.css" type="text/css">
+    <link rel="stylesheet" href="../css/skeleton.css" type="text/css">
+    <link rel="stylesheet" href="../css/wireframe_index_style.css" type="text/css">
+    <!-- Load our custom js -->
+    <script src="../js/script.js"></script>
+
+    <!-- Grab a custom font off google -->
+    <link href='https://fonts.googleapis.com/css?family=Raleway:400,300,600' rel='stylesheet' type='text/css'>
 </head>
+
+
 <body>
-    <h1>Theme Park WireFrame INDEX</h1>
-    <script src="script.js"></script>
+    <!-- Primary Page Layout -->
+
+    <!-- Header Navigation-->
+    <!-- Note: Header Nav is full width -->
+    <nav class="header_navigation" aria-labelledby="primary-navigation">
+        <div class="section hero">
+            <!-- Grid is 12 columns max -->
+            <div class="row">
+                <div class="offset-by-one five columns"> <!-- (5+1 offset) cols (6) -->
+                    <img src="" alt="Theme Park Site Logo" class="u-max-full-width u-pull-left" height="50px;">
+                </div>
+                <div class="three columns">  <!-- 3 cols (6+3)-->
+                    <select name="Language" id="Language" class="u-full-width"> 
+                        <option value="English">English</option>
+                        <option value="Simplified Chinese">简体</option>
+                    </select>
+                </div>
+                <div class="offset-by-one two columns">  <!-- 3 cols  (2+1 offset) (6+3+3)-->
+                    <input type="search" alt="Search" placeholder="Search.." class="u-full-width">
+                    </input>
+                </div>
+            </div>
+            <div class="row" style="border-top: 1px solid dimgray;">
+                <div class="offset-by-two eight columns"> <!-- 2 + 8 + 2  (i.e. centered 8 cols) -->
+                    <ul>
+                        <li><a href="#">Tickets</a></li>
+                        <li><a href="#">Location</a></li>
+                        <li><a href="#">FAQ</a></li>
+                        <li><a href="#">Support</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </nav>
+
+    <!-- Slider -->
+    <!-- Note: Slider Nav is full width-->
+    <div class="section"> <!-- 100% width, double border at top -->
+        <div class="section hero slider" style="border-top: double; background-color: #eee; height:500px;">
+            <div class="slider_overlay">
+                <h5>IMAGES OF PARK /ATTRACTIONS</h5>
+                <button onclick="window.location.href='page_2.html';" class="button-primary">Buy Tickets</button>
+            </div>
+        </div>
+    </div>
+
+    <!-- General Park Info -->
+    <!-- Note: General Park Info is not full width -->
+    <div class="container" style="margin-top:20px; margin-bottom:20px;">
+        <div class="one-half column">
+             <img src="../images/placeholder.png" alt="Theme Park Site Logo" class="u-max-full-width" style="background-color: #eee;">
+        </div>
+        <div class="one-half column">
+                <h5>General Information about the park</h5>
+                <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
+            Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem.</p>
+        </div>
+    </div>
+
+    <!-- Main Attraction Details -->
+    <!-- Note: Main Attraction Details Nav is full width-->
+    <div class="section"> <!-- 100% width, double border at top -->
+        <div class="section hero slider" style="border-top: double; background-color: #eee; height:500px;">
+            <div class="slider_overlay">
+                <h4>MAIN ATTRACTION DETAILS</h4>
+                <h5>Attraction Title Text</h5>
+                Text area for Description
+            </div>
+        </div>
+    </div>
+
+
+
+    <!-- Things to Do at the Park -->
+    <!-- Note: Header Nav is not full width-->
+    <div class="container" style="margin-top:20px; margin-bottom:20px; height: 100%;">
+        <div class="one-half column">
+             <img src="../images/placeholder.png" alt="Things to do at the park Image" class="u-max-full-width" style="background-color: #eee;">
+        </div>
+        <div class="one-half column"> 
+                <h5>Things to do at the park</h5>
+                <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
+            Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem.</p>
+                <ul>
+                    <li>Description 1</li>
+                    <li>Description 2</li>
+                    <li>Description 3</li>
+                </ul>
+        </div>
+    </div>
+
+
+    <!-- Load our footer navigation -->
+    <!-- Note: Footer Nav is not full width -->
+    <footer>
+        <nav class="footer_navigation" aria-labelledby="footer-navigation">
+            <div class="container section">
+                <div class="row">
+                    <div class="two-half column" style="border-bottom: 1px solid dimgray;">
+                        <a href="#" alt="Park Rules & Regulations">Park Rules & Regulations</a> 
+                        <a href="#" alt="Safety Compliance">Safety Compliance</a> 
+                        <a href="#" alt="Theme Park Site Logo"><img src="" alt="Theme Park Site Logo"></a>
+                        <a href="#" alt="Park Directions">Park Directions</a>
+                         <a href="#" alt="Buy a Ticket">Buy a Ticket</a>
+                    </div>
+                </div>
+                <div class="container section">
+                    <div class="two-half column">
+                        &copy; <script>document.write(new Date(). getFullYear())</script> Park Licence 
+                    </div>
+                <div>
+            </div>
+        </nav>
+    </footer>
 </body>
 </html>
