--- a/_wireframe/index.html
+++ b/_wireframe/index.html
@@ -29,12 +29,12 @@
 
     <!-- Header Navigation-->
     <!-- Note: Header Nav is full width -->
-    <nav class="header_navigation" aria-labelledby="primary-navigation">
+    <nav class="header_navigation"> <!-- aria-labelledby="header_navigation"> -->
         <div class="section hero">
             <!-- Grid is 12 columns max -->
             <div class="row">
                 <div class="offset-by-one five columns"> <!-- (5+1 offset) cols (6) -->
-                    <img src="" alt="Theme Park Site Logo" class="u-max-full-width u-pull-left" height="50px;">
+                    <img src="../images/missing.jpg" alt="Theme Park Site Logo" class="u-max-full-width u-pull-left height:50px;">
                 </div>
                 <div class="three columns">  <!-- 3 cols (6+3)-->
                     <select name="Language" id="Language" class="u-full-width"> 
@@ -43,8 +43,7 @@
                     </select>
                 </div>
                 <div class="offset-by-one two columns">  <!-- 3 cols  (2+1 offset) (6+3+3)-->
-                    <input type="search" alt="Search" placeholder="Search.." class="u-full-width">
-                    </input>
+                    <input type="search" placeholder="Search.." class="u-full-width">
                 </div>
             </div>
             <div class="row" style="border-top: 1px solid dimgray;">
@@ -120,22 +119,18 @@
     <!-- Load our footer navigation -->
     <!-- Note: Footer Nav is not full width -->
     <footer>
-        <nav class="footer_navigation" aria-labelledby="footer-navigation">
+        <nav class="footer_navigation"> <!-- aria-labelledby="footer_navigation">  -->
             <div class="container section">
                 <div class="row">
                     <div class="two-half column" style="border-bottom: 1px solid dimgray;">
-                        <a href="#" alt="Park Rules & Regulations">Park Rules & Regulations</a> 
-                        <a href="#" alt="Safety Compliance">Safety Compliance</a> 
-                        <a href="#" alt="Theme Park Site Logo"><img src="" alt="Theme Park Site Logo"></a>
-                        <a href="#" alt="Park Directions">Park Directions</a>
-                         <a href="#" alt="Buy a Ticket">Buy a Ticket</a>
+                        <a href="#">Park Rules & Regulations</a> 
+                        <a href="#">Safety Compliance</a> 
+                        <a href="#"><img src="../images/missing.jpg" alt="Theme Park Site Logo"></a>
+                        <a href="#">Park Directions</a>
+                        <a href="#">Buy a Ticket</a>
+                        <p>&copy; <script>document.write(new Date(). getFullYear())</script> Park Licence</p>
                     </div>
                 </div>
-                <div class="container section">
-                    <div class="two-half column">
-                        &copy; <script>document.write(new Date(). getFullYear())</script> Park Licence 
-                    </div>
-                <div>
             </div>
         </nav>
     </footer>
