added image logo
add image logo

--- a/_wireframe/index.html
+++ b/_wireframe/index.html
@@ -34,7 +34,7 @@
             <!-- Grid is 12 columns max -->
             <div class="row">
                 <div class="offset-by-one five columns"> <!-- (5+1 offset) cols (6) -->
-                    <img src="../images/missing.jpg" alt="Theme Park Site Logo" class="u-max-full-width u-pull-left height:50px;">
+                    <img src="../images/wireframe_logo.png" alt="Theme Park Site Logo" class="u-max-full-width u-pull-left" height="50px;">
                 </div>
                 <div class="three columns">  <!-- 3 cols (6+3)-->
                     <select name="Language" id="Language" class="u-full-width"> 
@@ -125,7 +125,7 @@
                     <div class="two-half column" style="border-bottom: 1px solid dimgray;">
                         <a href="#">Park Rules & Regulations</a> 
                         <a href="#">Safety Compliance</a> 
-                        <a href="#"><img src="../images/missing.jpg" alt="Theme Park Site Logo"></a>
+                        <a href="#"><img src="../images/wireframe_logo.png" alt="Theme Park Site Logo" height="40px;"></a>
                         <a href="#">Park Directions</a>
                         <a href="#">Buy a Ticket</a>
                         <p>&copy; <script>document.write(new Date(). getFullYear())</script> Park Licence</p>
