--- a/index.html
+++ b/index.html
@@ -10,7 +10,15 @@
     <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 
-<a href="_html_site/index.html">Load HTML Index Page</a><br/>
+<h1>Wireframe Pages</h1>
 <a href="_wireframe/index.html">Load WireFrame Index Page</a>
+<a href="_wireframe/page_2.html">Load WireFrame Page 2</a>
+<a href="_wireframe/page_3.html">Load WireFrame Page 3</a>
+
+<h1>HTML Site Pages</h1>
+<a href="_html_site/index.html">Load HTML Index Page</a><br/>
+<a href="_html_site/page_2.html">Load HTML Page 2</a><br/>
+<a href="_html_site/page_3.html">Load HTML Page 3</a><br/>
+
 
 </html>
