--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Theme Park LOADER</title>
-    <link href="style.css" rel="stylesheet" type="text/css" />
+    <link href="css/style.css" rel="stylesheet" type="text/css" />
 </head>
 
 <h1>Wireframe Pages</h1>
-<a href="_wireframe/index.html">Load WireFrame Index Page</a>
-<a href="_wireframe/page_2.html">Load WireFrame Page 2</a>
-<a href="_wireframe/page_3.html">Load WireFrame Page 3</a>
+<a href="_wireframe/index.html">Load WireFrame Index Page</a><br />
+<a href="_wireframe/page_2.html">Load WireFrame Page 2</a><br />
+<a href="_wireframe/page_3.html">Load WireFrame Page 3</a><br />
 
 <h1>HTML Site Pages</h1>
 <a href="_html_site/index.html">Load HTML Index Page</a><br/>
