--- a/_html_site/index.html
+++ b/_html_site/index.html
@@ -5,10 +5,172 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Theme Park INDEX</title>
-    <link href="../style.css" rel="stylesheet" type="text/css" />
+    <!-- Bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+    <!-- Bootstrap Icons -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+    <link href="/css/style.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
-    <h1>Theme Park INDEX</h1>
+    <!-- First Navigation -->
+    <nav class="navbar navbar-light bg-light">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">
+            <img src="/images/logo.png" alt="" width="30" height="24" class="d-inline-block align-text-top">
+            Logo
+            </a>
+            <form class="d-flex">
+                <button class="btn btn-outline-success" type="submit"><i class="bi bi-search"></i></button>
+                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    Language
+                </button>
+            </form>
+        </div>
+    </nav>
+    <!-- Second Navigation -->
+    <ul class="nav justify-content-center">
+        <li class="nav-item">
+          <a class="nav-link active" href="#">Tickets</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Location</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">FAQ</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Support</a>
+        </li>
+    </ul>
+    <!-- Hero Carousel -->
+    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img class="d-block w-100" src="../images/hero1.png" alt="First slide">
+                <div class="carousel-caption d-none d-md-block">
+                    <button type="button" class="btn btn-primary border-radius-lg">Buy Tickets</button>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img class="d-block w-100" src="../images/hero2.png" alt="Second slide">
+                <div class="carousel-caption d-none d-md-block">
+                    <button type="button" class="btn btn-primary">Buy Tickets</button>
+                </div>
+            </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        </a>
+    </div>
+    <!-- Section 1 -->
+    <div class="container">
+        <div class="grid">
+            <div class="section1">
+                <img 
+                src="../images/section1.png" alt="image">
+            </div>
+            <div class="text1">
+                <h2>General information about the park</h2>
+                <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem.</p>
+            </div>
+        </div>
+    </div>
+    <!-- Section 2 -->
+    <div class="section2">
+        <img src="../images/main_attraction.png" class="img-fluid" alt="main-attraction" id="main-attraction">
+        <div class="s2-text">
+            <h1 class="h-s2">Main Attraction Details</h1>
+            <h3 class="h-s2">Attraction Title Text</h3>
+            <h4 class="h-s2">Text Area For Description</h4>
+        </div>
+    </div>
+    <!-- Section 3 -->
+    <div class="container">
+        <div class="grid">
+            <div class="section3">
+                <img 
+                src="../images/section3.png" alt="image">
+            </div>
+            <div class="text3">
+                <h2>Things To Do At The Park</h2>
+                <p>Description 1</p>
+                <p>Description 2</p>
+                <p>Description 3</p>
+            </div>
+        </div>
+    </div>
+    <!-- Footer -->
+    <footer class="new_footer_area bg_color">
+        <div class="new_footer_top">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-3 col-md-6">
+                        <div class="f_widget company_widget wow fadeInLeft" data-wow-delay="0.2s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInLeft;">
+                            <h3 class="f-title f_600 t_color f_size_18">Get in Touch</h3>
+                            <p>Don’t miss the latest safety updates.</p>
+                            <form action="#" class="f_subscribe_two mailchimp" method="post" novalidate="true" _lpchecked="1">
+                                <input type="text" name="EMAIL" class="form-control memail" placeholder="Email">
+                                <button class="btn btn_get btn_get_two" type="submit">Subscribe</button>
+                                <p class="mchimp-errmessage" style="display: none;"></p>
+                                <p class="mchimp-sucmessage" style="display: none;"></p>
+                            </form>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6">
+                        <div class="f_widget about-widget pl_70 wow fadeInLeft" data-wow-delay="0.6s" style="visibility: visible; animation-delay: 0.6s; animation-name: fadeInLeft;">
+                            <h3 class="f-title f_600 t_color f_size_18">Tickets & Location</h3>
+                            <ul class="list-unstyled f_list">
+                                <li><a href="#">Buy A Ticket</a></li>
+                                <li><a href="#">Park Directions</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6">
+                        <div class="f_widget about-widget pl_70 wow fadeInLeft" data-wow-delay="0.4s" style="visibility: visible; animation-delay: 0.4s; animation-name: fadeInLeft;">
+                            <h3 class="f-title f_600 t_color f_size_18">Safety & Rules</h3>
+                            <ul class="list-unstyled f_list">
+                                <li><a href="#">Park Rules & Regulations</a></li>
+                                <li><a href="#">Safety Compliance </a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6">
+                        <div class="f_widget social-widget pl_70 wow fadeInLeft" data-wow-delay="0.8s" style="visibility: visible; animation-delay: 0.8s; animation-name: fadeInLeft;">
+                            <h3 class="f-title f_600 t_color f_size_18">Team 89</h3>
+                            <div class="f_social_icon">
+                                <a href="#" class=""></a>
+                                <a href="#" class=""></a>
+                                <a href="#" class="n"></a>
+                                <a href="#" class=""></a>
+                                <a href="#" class=""></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="footer_bottom">
+            <div class="container">
+                <div class="row align-items-center">
+                    <div class="col-lg-6 col-sm-7">
+                        <p class="mb-0 f_400">©Park License</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <script src="../script.js"></script>
 </body>
 </html>
