padding fix in homepage

--- a/_html_site/page_2.html
+++ b/_html_site/page_2.html
@@ -50,7 +50,7 @@
     <div>
         <div class="tickets-text">    
             <h3>Park Online Ticket Sales + Ticket Pricing</h1>
-            <h4>1.Select Your Type of Tickets</h3>
+            <h4>1. Select Your Type of Tickets</h3>
         </div>
         <!-- 4 ticket cards -->
         <div class="flexcontainer">
@@ -63,7 +63,7 @@
                 <h6 class="tickets-content">Lorem Ipslum</h6>
             </div>
             <div>
-                <p class="tickets">Multi-Day Ticket</p>
+                <p class="tickets">Multi-Day<br> Ticket</p>
                 <h6 class="tickets-content">Lorem Ipslum</h6>
             </div>
             <div>
@@ -73,9 +73,9 @@
         </div>
     </div>
        <!-- Calendar -->
-    <div>
+    <div class="calendar">
         <div class="tickets-text">    
-            <h4>2.Choose A Date Of Visit</h3>
+            <h4>2. Choose A Date Of Visit</h3>
         </div>
         <section class="ftco-section">
             <div class="container">
