removed column from footer

--- a/_html_site/index.html
+++ b/_html_site/index.html
@@ -136,23 +136,18 @@
                     </div>
                     <div class="col-lg-3 col-md-6">
                         <div class="f_widget about-widget pl_70 wow fadeInLeft" data-wow-delay="0.4s" style="visibility: visible; animation-delay: 0.4s; animation-name: fadeInLeft;">
-                            <h3 class="f-title f_600 t_color f_size_18">Safety & Rules</h3>
+                            <h3 class="f-title f_600 t_color f_size_18">Safety</h3>
                             <ul class="list-unstyled f_list">
-                                <li><a href="#">Park Rules & Regulations</a></li>
                                 <li><a href="#">Safety Compliance </a></li>
                             </ul>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6">
-                        <div class="f_widget social-widget pl_70 wow fadeInLeft" data-wow-delay="0.8s" style="visibility: visible; animation-delay: 0.8s; animation-name: fadeInLeft;">
-                            <h3 class="f-title f_600 t_color f_size_18">Team 89</h3>
-                            <div class="f_social_icon">
-                                <a href="#" class=""></a>
-                                <a href="#" class=""></a>
-                                <a href="#" class="n"></a>
-                                <a href="#" class=""></a>
-                                <a href="#" class=""></a>
-                            </div>
+                        <div class="f_widget about-widget pl_70 wow fadeInLeft" data-wow-delay="0.4s" style="visibility: visible; animation-delay: 0.4s; animation-name: fadeInLeft;">
+                            <h3 class="f-title f_600 t_color f_size_18">Rules</h3>
+                            <ul class="list-unstyled f_list">
+                                <li><a href="#">Park Rules & Regulations</a></li>
+                            </ul>
                         </div>
                     </div>
                 </div>
