--- a/_html_site/page_2.html
+++ b/_html_site/page_2.html
@@ -171,65 +171,61 @@
         </section>
     </div>
     <!-- Footer -->
-    <footer class="new_footer_area bg_color">
-        <div class="new_footer_top">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-3 col-md-6">
-                        <div class="f_widget company_widget wow fadeInLeft" data-wow-delay="0.2s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInLeft;">
-                            <h3 class="f-title f_600 t_color f_size_18">Get in Touch</h3>
-                            <p>Don’t miss the latest safety updates.</p>
-                            <form action="#" class="f_subscribe_two mailchimp" method="post" novalidate="true" _lpchecked="1">
-                                <input type="text" name="EMAIL" class="form-control memail" placeholder="Email">
-                                <button class="btn btn_get btn_get_two" type="submit">Subscribe</button>
-                                <p class="mchimp-errmessage" style="display: none;"></p>
-                                <p class="mchimp-sucmessage" style="display: none;"></p>
-                            </form>
-                        </div>
+   <!-- Footer -->
+   <footer class="new_footer_area bg_color">
+    <div class="new_footer_top">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-3 col-md-6">
+                    <div class="f_widget company_widget wow fadeInLeft" data-wow-delay="0.2s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInLeft;">
+                        <h3 class="f-title f_600 t_color f_size_18">Get in Touch</h3>
+                        <p>Don’t miss the latest safety updates.</p>
+                        <form action="#" class="f_subscribe_two mailchimp" method="post" novalidate="true" _lpchecked="1">
+                            <input type="text" name="EMAIL" class="form-control memail" placeholder="Email">
+                            <button class="btn btn_get btn_get_two" type="submit">Subscribe</button>
+                            <p class="mchimp-errmessage" style="display: none;"></p>
+                            <p class="mchimp-sucmessage" style="display: none;"></p>
+                        </form>
                     </div>
-                    <div class="col-lg-3 col-md-6">
-                        <div class="f_widget about-widget pl_70 wow fadeInLeft" data-wow-delay="0.6s" style="visibility: visible; animation-delay: 0.6s; animation-name: fadeInLeft;">
-                            <h3 class="f-title f_600 t_color f_size_18">Tickets & Location</h3>
-                            <ul class="list-unstyled f_list">
-                                <li><a href="#">Buy A Ticket</a></li>
-                                <li><a href="#">Park Directions</a></li>
-                            </ul>
-                        </div>
+                </div>
+                <div class="col-lg-3 col-md-6">
+                    <div class="f_widget about-widget pl_70 wow fadeInLeft" data-wow-delay="0.6s" style="visibility: visible; animation-delay: 0.6s; animation-name: fadeInLeft;">
+                        <h3 class="f-title f_600 t_color f_size_18">Tickets & Location</h3>
+                        <ul class="list-unstyled f_list">
+                            <li><a href="#">Buy A Ticket</a></li>
+                            <li><a href="#">Park Directions</a></li>
+                        </ul>
                     </div>
-                    <div class="col-lg-3 col-md-6">
-                        <div class="f_widget about-widget pl_70 wow fadeInLeft" data-wow-delay="0.4s" style="visibility: visible; animation-delay: 0.4s; animation-name: fadeInLeft;">
-                            <h3 class="f-title f_600 t_color f_size_18">Safety & Rules</h3>
-                            <ul class="list-unstyled f_list">
-                                <li><a href="#">Park Rules & Regulations</a></li>
-                                <li><a href="#">Safety Compliance </a></li>
-                            </ul>
-                        </div>
+                </div>
+                <div class="col-lg-3 col-md-6">
+                    <div class="f_widget about-widget pl_70 wow fadeInLeft" data-wow-delay="0.4s" style="visibility: visible; animation-delay: 0.4s; animation-name: fadeInLeft;">
+                        <h3 class="f-title f_600 t_color f_size_18">Safety</h3>
+                        <ul class="list-unstyled f_list">
+                            <li><a href="#">Safety Compliance </a></li>
+                        </ul>
                     </div>
-                    <div class="col-lg-3 col-md-6">
-                        <div class="f_widget social-widget pl_70 wow fadeInLeft" data-wow-delay="0.8s" style="visibility: visible; animation-delay: 0.8s; animation-name: fadeInLeft;">
-                            <h3 class="f-title f_600 t_color f_size_18">Team 89</h3>
-                            <div class="f_social_icon">
-                                <a href="#" class=""></a>
-                                <a href="#" class=""></a>
-                                <a href="#" class="n"></a>
-                                <a href="#" class=""></a>
-                                <a href="#" class=""></a>
-                            </div>
-                        </div>
+                </div>
+                <div class="col-lg-3 col-md-6">
+                    <div class="f_widget about-widget pl_70 wow fadeInLeft" data-wow-delay="0.4s" style="visibility: visible; animation-delay: 0.4s; animation-name: fadeInLeft;">
+                        <h3 class="f-title f_600 t_color f_size_18">Rules</h3>
+                        <ul class="list-unstyled f_list">
+                            <li><a href="#">Park Rules & Regulations</a></li>
+                        </ul>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="footer_bottom">
-            <div class="container">
-                <div class="row align-items-center">
-                    <div class="col-lg-6 col-sm-7">
-                        <p class="mb-0 f_400">©Park License</p>
-                    </div>
+    </div>
+    <div class="footer_bottom">
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-lg-6 col-sm-7">
+                    <p class="mb-0 f_400">©Park License</p>
                 </div>
             </div>
         </div>
-    </footer>
+    </div>
+</footer>
     <!-- Scripts -->
     <script src="https://js.stripe.com/v3/"></script>
     <script src="js/jquery.min.js"></script>
