--- a/_html_site/page_3.html
+++ b/_html_site/page_3.html
@@ -16,36 +16,37 @@
 
     <!-- Header Navigation-->
     <!-- Note: Header Nav is full width -->
-    <nav class="header_navigation"> <!-- aria-labelledby="header_navigation"> -->
-        <div class="section hero">
-            <!-- Grid is 12 columns max -->
-            <div class="row">
-                <div class="offset-by-one five columns"> <!-- (5+1 offset) cols (6) -->
-                    <img src="../images/wireframe_logo.png" alt="Theme Park Site Logo" class="u-max-full-width u-pull-left" height="50px;">
-                </div>
-                <div class="three columns">  <!-- 3 cols (6+3)-->
-                    <select name="Language" id="Language" class="u-full-width"> 
-                        <option value="English">English</option>
-                        <option value="Simplified Chinese">简体</option>
-                        <option value='Dutch'>Nederlands</option>
-                    </select>
-                </div>
-                <div class="offset-by-one two columns">  <!-- 3 cols  (2+1 offset) (6+3+3)-->
-                    <input type="search" placeholder="Search.." class="u-full-width">
-                </div>
-            </div>
-            <div class="row" style="border-top: 1px solid dimgray;">
-                <div class="offset-by-two eight columns"> <!-- 2 + 8 + 2  (i.e. centered 8 cols) -->
-                    <ul>
-                        <li><a href="#">Tickets</a></li>
-                        <li><a href="#">Location</a></li>
-                        <li><a href="#">FAQ</a></li>
-                        <li><a href="#">Support</a></li>
-                    </ul>
-                </div>
-            </div>
+    <!-- First Navigation -->
+    <nav class="navbar navbar-light bg-light">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">
+            <img src="/images/logo.png" alt="" width="30" height="24" class="d-inline-block align-text-top">
+            Logo
+            </a>
+            <form class="d-flex">
+                <button class="btn btn-outline-success" type="submit"><i class="bi bi-search"></i></button>
+                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    Language
+                </button>
+            </form>
         </div>
     </nav>
+    <!-- Second Navigation -->
+    <ul class="nav justify-content-center">
+        <li class="nav-item">
+          <a class="nav-link active" href="#">Tickets</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Location</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">FAQ</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Support</a>
+        </li>
+    </ul>
 
     <!-- Park Map -->
     <!-- Note: Park Map is full width-->
@@ -143,23 +144,61 @@
     </div>
 
     
-    <!-- Load our footer navigation -->
-    <!-- Note: Footer Nav is not full width -->
-    <footer>
-        <nav class="footer_navigation"> <!-- aria-labelledby="footer_navigation">  -->
-            <div class="container section">
-                <div class="row">
-                    <div class="two-half column" style="border-bottom: 1px solid dimgray;">
-                        <a href="#">Park Rules & Regulations</a> 
-                        <a href="#">Safety Compliance</a> 
-                        <a href="#"><img src="../images/wireframe_logo.png" alt="Theme Park Site Logo" height="40px;"></a>
-                        <a href="#">Park Directions</a>
-                        <a href="#">Buy a Ticket</a>
-                        <p>&copy; <script>document.write(new Date(). getFullYear())</script> Park Licence</p>
+   
+  <!-- Footer -->
+  <footer class="new_footer_area bg_color">
+    <div class="new_footer_top">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-3 col-md-6">
+                    <div class="f_widget company_widget wow fadeInLeft" data-wow-delay="0.2s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInLeft;">
+                        <h3 class="f-title f_600 t_color f_size_18">Get in Touch</h3>
+                        <p>Don’t miss the latest safety updates.</p>
+                        <form action="#" class="f_subscribe_two mailchimp" method="post" novalidate="true" _lpchecked="1">
+                            <input type="text" name="EMAIL" class="form-control memail" placeholder="Email">
+                            <button class="btn btn_get btn_get_two" type="submit">Subscribe</button>
+                            <p class="mchimp-errmessage" style="display: none;"></p>
+                            <p class="mchimp-sucmessage" style="display: none;"></p>
+                        </form>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6">
+                    <div class="f_widget about-widget pl_70 wow fadeInLeft" data-wow-delay="0.6s" style="visibility: visible; animation-delay: 0.6s; animation-name: fadeInLeft;">
+                        <h3 class="f-title f_600 t_color f_size_18">Tickets & Location</h3>
+                        <ul class="list-unstyled f_list">
+                            <li><a href="#">Buy A Ticket</a></li>
+                            <li><a href="#">Park Directions</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6">
+                    <div class="f_widget about-widget pl_70 wow fadeInLeft" data-wow-delay="0.4s" style="visibility: visible; animation-delay: 0.4s; animation-name: fadeInLeft;">
+                        <h3 class="f-title f_600 t_color f_size_18">Safety</h3>
+                        <ul class="list-unstyled f_list">
+                            <li><a href="#">Safety Compliance </a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6">
+                    <div class="f_widget about-widget pl_70 wow fadeInLeft" data-wow-delay="0.4s" style="visibility: visible; animation-delay: 0.4s; animation-name: fadeInLeft;">
+                        <h3 class="f-title f_600 t_color f_size_18">Rules</h3>
+                        <ul class="list-unstyled f_list">
+                            <li><a href="#">Park Rules & Regulations</a></li>
+                        </ul>
                     </div>
                 </div>
             </div>
-        </nav>
-    </footer>
+        </div>
+    </div>
+    <div class="footer_bottom">
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-lg-6 col-sm-7">
+                    <p class="mb-0 f_400">©Park License</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</footer>
 </body>
 </html>
