Fixed the wrieframe links

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 
 <body>
 <h1>Wireframe Pages</h1>
-<a href="_wireframe/index.html">Load WireFrame Index Page</a><br />
-<a href="_wireframe/page_2.html">Load WireFrame Page 2</a><br />
-<a href="_wireframe/page_3.html">Load WireFrame Page 3</a><br />
+<a href="_wireframe/page1.png">Load WireFrame Index Page</a><br />
+<a href="_wireframe/page2.png">Load WireFrame Page 2</a><br />
+<a href="_wireframe/page3.png">Load WireFrame Page 3</a><br />
 
 <h1>HTML Site Pages</h1>
 <a href="_html_site/index.html">Load HTML Index Page</a><br/>
