nav color page 3 corrected

--- a/_html_site/page_3.html
+++ b/_html_site/page_3.html
@@ -33,7 +33,7 @@
         </div>
     </nav>
     <!-- Second Navigation -->
-    <ul class="nav justify-content-center">
+    <ul class="nav justify-content-center" id="nav-blue">
         <li class="nav-item">
           <a class="nav-link active" href="#">Tickets</a>
         </li>
